Term implements Iterable